# nes-py

./: pyproject.toml  setup.py
.github/workflows/: wheels.yml
nes_py/: nes_env.py
nes_py/app/: play_human.py
nes_py/nes/: SConstruct
nes_py/nes/include/: cartridge.hpp  common.hpp  cpu.hpp  emulator.hpp  light_ppu.hpp  main_bus.hpp  mapper.hpp  mapper_factory.hpp  picture_bus.hpp  ppu.hpp
nes_py/nes/include/mappers/: mapper_CNROM.hpp  mapper_NROM.hpp  mapper_SxROM.hpp  mapper_UxROM.hpp
nes_py/nes/src/: cartridge.cpp  cpu.cpp  emulator.cpp  lib_nes_env.cpp  light_ppu.cpp  main_bus.cpp  picture_bus.cpp  ppu.cpp  serialization.cpp
nes_py/nes/src/mappers/: mapper_CNROM.cpp  mapper_NROM.cpp  mapper_SxROM.cpp  mapper_UxROM.cpp
nes_py/tests/: test_nes_env.py
nes_py/wrappers/: joypad_space.py
